<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vue.activity.MainActivity"
    android:background="#18534F">

    <TextView
        android:id="@+id/nameAppTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/app_name"
        android:textColor="#ECF8F6"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.057" />

    <androidx.cardview.widget.CardView
        android:id="@+id/connexionCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#226D68"
        app:cardCornerRadius="25sp"
        app:cardElevation="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/connexionLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/connexionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/connexion"
                android:textColor="#ECF8F6"
                android:textSize="35sp" />
            <TextView
                android:id="@+id/informationsConnexionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/Fill_in_the_information_to_connect"
                android:textColor="#FEEAA1"
                android:textSize="15sp"
                android:gravity="center" />
            <TextView
                android:id="@+id/erreurConnexionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/error"
                android:textColor="#ff0000"
                android:textSize="20sp"
                android:gravity="center"
                android:visibility="gone" />

            <EditText
                android:id="@+id/nomUtilisateurConnexionTextView"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="10dp"
                android:autofillHints="username"
                android:background="@drawable/edit_text_background"
                android:textColor="#D6955B"
                android:foregroundTint="#FA0707"
                android:hint="@string/Fill_in_the_username_field"
                android:inputType="text"
                android:padding="10dp"
                android:textColorHint="#D6955B"
                android:drawableEnd="@drawable/nomutilisateur"/>
            <EditText
                android:id="@+id/motDePasseConnexionTextView"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:autofillHints="password"
                android:background="@drawable/edit_text_background"
                android:textColor="#D6955B"
                android:padding="10dp"
                android:inputType="textPassword"
                android:hint="@string/Fill_in_the_password_field"
                android:textColorHint="#D6955B"
                android:drawableEnd="@drawable/password"/>

            <CheckBox
                android:id="@+id/connexionMotDePasseCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/connexion_password_checkbox"
                android:textColor="#ECF8F6"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/lienVersLaPageInscriptionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:text="@string/link_registration"
                android:textColor="#ECF8F6"
                android:textSize="18sp"
                android:textStyle="italic" />
            <LinearLayout
                android:id="@+id/connexionLinearLayoutBouton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/connexionBouton"
                    android:layout_width="160dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:backgroundTint="#D6955B"
                    android:text="@string/connect"
                    android:textColor="#FEEAA1"
                    android:textSize="15sp" />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author"
        android:textColor="#C9E3CC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.96" />

</androidx.constraintlayout.widget.ConstraintLayout>